fix scroll in slider hero on mobile

--- a/src/app/public/components/carrousel/carrousel.component.scss
+++ b/src/app/public/components/carrousel/carrousel.component.scss
@@ -9,6 +9,9 @@
         background-color: rgba($white, .25);
         backdrop-filter: blur(.3rem);
         margin-bottom: 5rem;
+        @include max-responsive($desktop-laptop) {
+            touch-action: pan-y;
+        }
         .wrap-carrousel-hero {
             display: flex;
             box-sizing: border-box;
